--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 						<li><a href="#milestones-top" data-start="color: rgb(255, 255, 255);" data-20p="color: rgb(0, 0, 0);">Rozwój</a></li>
 						<!--<li><a href="#team-top" data-start="color: rgb(255, 255, 255);" data-20p="color: rgb(0, 0, 0);">Zespół</a></li>-->
 						<!--<li><a href="#news" data-start="color: rgb(255, 255, 255);" data-20p="color: rgb(0, 0, 0);">Aktualności</a></li>-->
+						<li><a href="http://wroclaw.gdziezaparkuje.pl" target="_blank" data-start="color: rgb(255, 255, 255);" data-20p="color: rgb(0, 0, 0);">Prototyp</a></li>
 					</ul>
 				</div>
 			</div>
@@ -456,6 +457,7 @@
 						<!--<a href="#news"><h4>Aktualności</h4></a>-->
 						<!--<a href="#gallery-top"><h4>Gallery</h4></a>
 						<a href="#team-top"><h4>Team</h4></a>-->
+						<a href="http://wroclaw.gdziezaparkuje.pl" target="_blank"><h4>Prototyp</h4></a>
 					</div>
 	<!-- Copyright -->
 					<div class="col-sm-12 divide-xs">
