Dealing with photos

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 					</div>
 					<div class="clearfix"></div>
 					<div class="col-sm-12 divide-md">
-						<img class="img-responsive" src="img/fotolia_66330618.jpg" alt="">
+						<img class="img-responsive" src="img/fotolia_142387838.jpg" alt="">
 					</div>
 					<div class="clearfix"></div>
 	<!-- Service #1 -->
@@ -189,7 +189,7 @@
 					</div>
 					<div class="clearfix"></div>
 					<div class="col-sm-12 divide-md">
-						<img class="img-responsive" src="http://placehold.it/1140x325" alt="">
+						<img class="img-responsive" src="img/fotolia_156336820.jpg" alt="">
 					</div>
 					<div class="clearfix"></div>
 	<!-- Feature #1 -->
@@ -370,10 +370,10 @@
 					<div class="col-sm-6">
 						<div class="squared">
 							<div class="squared-content">
-								<div id="carousel-2" class="carousel">
+								<div id="carousel-4" class="carousel">
 									<div class="carousel-inner">
 										<div class="item active">
-											<img src="http://placehold.it/555x555" alt="">
+											<img src="img/fotolia_102644744.jpg" alt="">
 										</div>
 										<div class="item">
 											<img src="http://placehold.it/555x555" alt="">
@@ -382,8 +382,8 @@
 											<img src="http://placehold.it/555x555" alt="">
 										</div>
 									</div>
-									<button class="left carousel-control" href="#carousel-2" data-slide="prev"><i class="fa fa-angle-left"></i></button>
-									<button class="right carousel-control" href="#carousel-2" data-slide="next"><i class="fa fa-angle-right"></i></button>
+									<button class="left carousel-control" href="#carousel-4" data-slide="prev"><i class="fa fa-angle-left"></i></button>
+									<button class="right carousel-control" href="#carousel-4" data-slide="next"><i class="fa fa-angle-right"></i></button>
 								</div>
 							</div>
 						</div>
@@ -418,7 +418,7 @@
 					<div class="col-sm-6">
 						<div class="squared">
 							<div class="squared-content">
-								<div id="carousel-3" class="carousel">
+								<div id="carousel-5" class="carousel">
 									<div class="carousel-inner">
 										<div class="item active">
 											<img src="http://placehold.it/555x555" alt="">
@@ -430,8 +430,8 @@
 											<img src="http://placehold.it/555x555" alt="">
 										</div>
 									</div>
-									<button class="left carousel-control" href="#carousel-3" data-slide="prev"><i class="fa fa-angle-left"></i></button>
-									<button class="right carousel-control" href="#carousel-3" data-slide="next"><i class="fa fa-angle-right"></i></button>
+									<button class="left carousel-control" href="#carousel-5" data-slide="prev"><i class="fa fa-angle-left"></i></button>
+									<button class="right carousel-control" href="#carousel-5" data-slide="next"><i class="fa fa-angle-right"></i></button>
 								</div>
 							</div>
 						</div>
