Added more photos for prototype and sensors

--- a/index.html
+++ b/index.html
@@ -275,11 +275,15 @@
 								<div id="carousel-1" class="carousel">
 									<div class="carousel-inner">
 										<div class="item active">
-											<img src="http://placehold.it/555x555" alt="">
+											<img src="img/prototype_green2.jpg" alt="">
+										</div>
+										<div class="item active">
+											<img src="img/prototype_yellow2.jpg" alt="">
 										</div>
 										<div class="item">
-											<img src="http://placehold.it/555x555" alt="">
-										</div>									</div>
+											<img src="img/prototype_red3.jpg" alt="">
+										</div>									
+									</div>
 									<button class="left carousel-control" href="#carousel-1" data-slide="prev"><i class="fa fa-angle-left"></i></button>
 									<button class="right carousel-control" href="#carousel-1" data-slide="next"><i class="fa fa-angle-right"></i></button>
 								</div>
@@ -376,10 +380,7 @@
 											<img src="img/fotolia_102644744.jpg" alt="">
 										</div>
 										<div class="item">
-											<img src="http://placehold.it/555x555" alt="">
-										</div>
-										<div class="item">
-											<img src="http://placehold.it/555x555" alt="">
+											<img src="img/fotolia_159525636.jpg" alt="">
 										</div>
 									</div>
 									<button class="left carousel-control" href="#carousel-4" data-slide="prev"><i class="fa fa-angle-left"></i></button>
