Added society images

--- a/index.html
+++ b/index.html
@@ -350,13 +350,10 @@
 								<div id="carousel-3" class="carousel">
 									<div class="carousel-inner">
 										<div class="item active">
-											<img src="http://placehold.it/555x555" alt="">
+											<img src="img/fotolia_154924042.jpg" alt="">
 										</div>
 										<div class="item">
-											<img src="http://placehold.it/555x555" alt="">
-										</div>
-										<div class="item">
-											<img src="http://placehold.it/555x555" alt="">
+											<img src="img/fotolia_154923906.jpg" alt="">
 										</div>
 									</div>
 									<button class="left carousel-control" href="#carousel-3" data-slide="prev"><i class="fa fa-angle-left"></i></button>
