Added mobile app images

--- a/index.html
+++ b/index.html
@@ -302,13 +302,10 @@
 								<div id="carousel-2" class="carousel">
 									<div class="carousel-inner">
 										<div class="item active">
-											<img src="http://placehold.it/555x555" alt="">
+											<img src="img/fotolia_99227953.jpg" alt="">
 										</div>
 										<div class="item">
-											<img src="http://placehold.it/555x555" alt="">
-										</div>
-										<div class="item">
-											<img src="http://placehold.it/555x555" alt="">
+											<img src="img/fotolia_114154712.jpg" alt="">
 										</div>
 									</div>
 									<button class="left carousel-control" href="#carousel-2" data-slide="prev"><i class="fa fa-angle-left"></i></button>
