Footer restoration to Awerest

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 					</div>
 	<!-- Copyright -->
 					<div class="col-sm-12 divide-xs">
-						<p><small>Copyright &copy; 2017 gdzieZaparkuje.pl</small></p>
+						<p><small>Copyright &copy; 2015 Awerest Inc. All rights reserved.</small></p>
 					</div>
 					<div class="clearfix"></div>
 					<div class="divide-sm"></div>
