--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 					<div class="col-sm-6">
 						<div class="squared">
 							<div class="squared-content">
-								<h2>Prototyp</h2>
+								<h2>Działający prototyp</h2>
 								<h5 class="smoke"><small>Wykorzystuje wrocławskie Otwarte Dane</small></h5>
 								<p>Pokazuje zajętość w czasie rzeczywistym kilku wybranych zadaszonych parkingów we Wrocławiu w postaci wykresów. Ostrzega, gdy ilość wolnych miejsc wyczerpuje się. Źródłem danych jest system ITS. </p>
 								<a href="http://wroclaw.gdziezaparkuje.pl" target="_blank" class="btn btn-ghost">Sprawdź</a>
