Added beacons to Development section.

--- a/index.html
+++ b/index.html
@@ -368,10 +368,10 @@
 								<div id="carousel-4" class="carousel">
 									<div class="carousel-inner">
 										<div class="item active">
-											<img src="img/fotolia_102644744.jpg" alt="">
+											<img src="img/fotolia_161420542_2.jpg" alt="">
 										</div>
 										<div class="item">
-											<img src="img/fotolia_159525636.jpg" alt="">
+											<img src="img/fotolia_102644744.jpg" alt="">
 										</div>
 									</div>
 									<button class="left carousel-control" href="#carousel-4" data-slide="prev"><i class="fa fa-angle-left"></i></button>
@@ -384,9 +384,9 @@
 					<div class="col-sm-6">
 						<div class="squared">
 							<div class="squared-content">
-								<h2>Etap III - Kamery, czujniki...</h2>
+								<h2>Etap III - Kamery, beacony...</h2>
 								<h5 class="smoke"><small>Wykorzystanie Internet of Things (IoT)</small></h5>
-								<p class="dark-smoke">Uzyskanie precyzyjnych informacji o wolnych miejscach parkingowych z urządzeń, jak np. kamery i czujniki parkowania, podłączonych do Internetu.</p>
+								<p class="dark-smoke">Uzyskanie precyzyjnych informacji o wolnych miejscach parkingowych z urządzeń, jak np. kamery podłączone do Internetu oraz beacony - małe urządzenia o niewielkim poborze energii łączące się w technologii Bluetooth.</p>
 							</div>
 						</div>
 					</div>
