--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 					<div class="divide-sm"></div>
 					<div class="col-sm-12 divide-xs">
 						<a href="#intro"><h4>Start</h4></a>
-						<a href="#services"><h4>Usługi</h4></a>
+						<a href="#services"><h4>Usługa</h4></a>
 						<a href="#features"><h4>Funkcjonalności</h4></a>
 						<!--<a href="#works-top"><h4>Jak działa?</h4></a>-->
 						<a href="#milestones"><h4>Rozwój</h4></a>
